[package]
name = "multi-nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
reqwest = { version = "0.11.11", features = ["json"] }
base64 = "0.13.0"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
hex = "0.4.3"
